--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -33,6 +33,7 @@
 
             <!-- logo -->
             <ImageView
+                android:paddingStart="4dp"
                 android:layout_gravity="top"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/appbar_entity_dimen"
