--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
 
             <!-- logo -->
             <ImageView
+                android:paddingStart="4dp"
                 android:layout_gravity="bottom"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/appbar_entity_dimen"
