--- a/app/src/main/res/layout/menu_item_refresh.xml
+++ b/app/src/main/res/layout/menu_item_refresh.xml
@@ -9,6 +9,7 @@
     <ImageView
         android:id="@+id/refresh_icon"
         android:layout_gravity="top|end"
+        android:layout_marginEnd="8dp"
         android:padding="@dimen/refresh_button_padding"
         android:layout_width="@dimen/appbar_entity_dimen"
         android:layout_height="@dimen/appbar_entity_dimen"
