--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_list"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/appbar_height_collapsed"
+                android:layout_height="?actionBarSize"
                 app:layout_collapseMode="pin" />
 
             <!-- logo -->
